--- a/src/parsers/Makefile.am
+++ b/src/parsers/Makefile.am
@@ -15,32 +15,28 @@
 # You should have received a copy of the GNU General Public License along with
 # CoFlo.  If not, see <http://www.gnu.org/licenses/>.
 
-ANTLRPARSERSRCS = coflo_c_parser.g
-ANTLRBUILTSRC = $($(ANTLRPARSERSRCS):.g=.tokens) \
-	$($(ANTLRPARSERSRCS):.g=Lexer.hpp) \
-	$($(ANTLRPARSERSRCS):.g=Lexer.cpp) \
-	$($(ANTLRPARSERSRCS):.g=Parser.hpp) \
-	$($(ANTLRPARSERSRCS):.g=Parser.cpp)
-ANTLRCPPINCDIR = '/home/Gary/src/antlr_cpp_target/include'
+DPARSER_BUILTSRC = $(srcdir)/coflo_c_parser.cpp \
+	$(srcdir)/gcc_gimple_parser.cpp
 
 # Make sure to distribute the parser built source.
 # @todo Currently we need to have DParser installed in order to build (need its library), so there's
 # not much point in distributing the .cpp files it generates.  We'll put this back once we figure out how to
 # avoid the configure-time dependency on an installed DParser.
-#EXTRA_DIST = $(srcdir)/gcc_gimple_parser.cpp $(srcdir)/coflo_c_parser.cpp
+#EXTRA_DIST = $(srcdir)/gcc_gimple_parser.cpp
 
 # The generated parser .cpp files should not normally be cleaned.  Make them maintainer-clean files.
 # @todo Put this back once we figure out how to avoid the configure-time dependency on an installed DParser.  For now we're
 # always building them, so they go in MOSTLYCLEANFILES.
 #MAINTAINERCLEANFILES = $(srcdir)/gcc_gimple_parser.cpp $(srcdir)/coflo_c_parser.cpp
-MOSTLYCLEANFILES = gcc_gimple_parser.cpp gcc_gimple_parser.dparser.gdebug $(ANTLRBUILTSRC)
+MOSTLYCLEANFILES = $(DPARSER_BUILTSRC)
 
-BUILT_SOURCES = gcc_gimple_parser.cpp $(ANTLRBUILTSRC)
+BUILT_SOURCES = $(DPARSER_BUILTSRC)
 
 noinst_LIBRARIES = libparsers.a 
-libparsers_a_SOURCES = gcc_gimple_parser.dparser gcc_gimple_parser.h $(ANTLRPARSERSRCS)
+libparsers_a_SOURCES = gcc_gimple_parser.dparser.g gcc_gimple_parser.h coflo_c_parser.dparser.g coflo_c_parser.h
+
 libparsers_a_CPPFLAGS = -I $(top_srcdir)/src -I $(top_builddir)/third_party/dparser/local/include -I $(top_srcdir)/src/debug_utils \
-	$(BOOST_TR1_CPPFLAGS) $(BOOST_CPPFLAGS) -I $(ANTLRCPPINCDIR) $(AM_CPPFLAGS)
+	$(BOOST_TR1_CPPFLAGS) $(BOOST_CPPFLAGS) $(AM_CPPFLAGS)
 libparsers_a_CFLAGS = $(AM_CFLAGS)
 libparsers_a_CXXFLAGS = $(AM_CXXFLAGS)
 
@@ -50,18 +46,16 @@ PROG_ABSPATH_MAKE_DPARSER = $(top_builddir)/third_party/make_dparser
 DPARSER_FLAGS = --verbose=2 --debug --ext=cpp
 
 # Suffix for DParser grammars.
-SUFFIXES = .dparser
-# Suffixes for ANTLR grammars.
-SUFFIXES += .g .tokens Lexer.cpp Lexer.hpp Parser.cpp Parser.hpp 
+SUFFIXES = .dparser.g
 
-# Rule to make *.cpp from *.g using DParser.
+# Rule to make *.cpp from *.dparser.g using DParser.
 # Note:
 # - The output file (*.cpp) is built source, but we don't want the user to have to have dparser installed,
 # so it is created under $(srcdir) and gets distributed.
 # - @TODO Actually, at the moment we're going to require the user to have DParser, so we won't do either.
 # - The intermediate file in the rule below, *.g.gdebug, is generated under $(bindir) so as not to cause "make distcheck" to fail.
-.dparser.cpp:
-	BASENAME="$$(basename "$<" .dparser)" && \
+.dparser.g.cpp:
+	BASENAME="$$(basename "$<" .dparser.g)" && \
 	TARGET="$$(basename "$@")" && \
 	SOURCE="$(srcdir)/$$(basename "$<")" && \
 	INTER="$$(basename "$<").gdebug" && \
@@ -69,9 +63,5 @@ SUFFIXES += .g .tokens Lexer.cpp Lexer.hpp Parser.cpp Parser.hpp
 	"$(SED)" -r -e 's/\(void\*\)([a-zA-Z_][a-zA-Z0-9_]+)/static_cast<void*>\(\1\)/g' "$${INTER}" > "$${TARGET}-temp" && \
 	mv "$${TARGET}-temp" "$${TARGET}"
 
-
-# Rules to make the necessary .cpp and .h files from a *.g file using ANTLRv3.4.
-%.tokens %Lexer.cpp %Lexer.hpp %Parser.cpp %Parser.hpp: %.g
-	java -jar 'C:\cygwin\bin_java\antlr-3.4-with-cpp\antlr-3.4-with-cpp.jar' '$<' -report
 
 
