--- a/configure.ac
+++ b/configure.ac
@@ -249,7 +249,7 @@ AC_DEFINE_UNQUOTED([PROG_ABSPATH_DOT],["$PROG_ABSPATH_DOT"],[Define to the absol
 
 # The Google Test library.
 # See if the user specified a path to it on the configure command line.
-COFLO_ARG_WITH_DIR([GTEST_ROOT], [gtest], [root directory of the Google C++ Testing Framework source distribution])
+#COFLO_ARG_WITH_DIR([GTEST_ROOT], [gtest], [root directory of the Google C++ Testing Framework source distribution])
 
 # The DParser source distribution's tarball.
 # To avoid requiring the user to build and install DParser on their system, we'll take the tarball
