--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -96,17 +96,12 @@ TESTLIBS = ./controlflowgraph/libcontrolflowgraphtest.a
 
 # For Google Test, we need the following to be defined by configure:
 # - GTEST_ROOT: The directory of source distribution.
-
-gtest-all.cc: $(GTEST_ROOT)/src/gtest-all.cc
-	cp $< $@
-
-BUILT_SOURCES = gtest-all.cc
-MOSTLYCLEANFILES = gtest-all.cc
+GTEST_ROOT = $(top_srcdir)/third_party/gtest-1.6.0/fused-src
 
 check_PROGRAMS = coflotest
 coflotest_SOURCES = coflotest.cpp $(TESTSOURCES) $(COMMONSOURCES)
-nodist_coflotest_SOURCES = gtest-all.cc
-coflotest_CPPFLAGS = -I $(GTEST_ROOT)/include -I $(GTEST_ROOT) \
+nodist_coflotest_SOURCES = $(GTEST_ROOT)/gtest/gtest-all.cc
+coflotest_CPPFLAGS = -I $(GTEST_ROOT)/gtest -I $(GTEST_ROOT) \
 	-I $(top_builddir)/third_party/dparser/local/include -I $(top_srcdir)/src/debug_utils -I $(top_srcdir)/src/parsers \
 	$(BOOST_TR1_CPPFLAGS) $(BOOST_CPPFLAGS) $(AM_CPPFLAGS) 
 coflotest_CFLAGS = $(CPPUNIT_CFLAGS) $(AM_CFLAGS)
@@ -114,4 +109,4 @@ coflotest_CXXFLAGS = $(AM_CXXFLAGS)
 coflotest_LDFLAGS = $(BOOST_LIBTOOL_FLAGS) $(BOOST_LDFLAGS) \
 	$(BOOST_PROGRAM_OPTIONS_LDFLAGS) $(BOOST_REGEX_LDFLAGS) $(BOOST_SYSTEM_LDFLAGS) $(BOOST_FILESYSTEM_LDFLAGS) \
 	$(AM_LDFLAGS)
-coflotest_LDADD = $(TESTLIBS) $(CPPUNIT_LIBS) $(NORMALLIBS) $(DPARSER_LDADD) $(ALLBOOSTLIBS)
+coflotest_LDADD = $(TESTLIBS) $(NORMALLIBS) $(DPARSER_LDADD) $(ALLBOOSTLIBS)
