(Issue #20) :  undefined reference to `typeinfo for CFGEdgeTypeFunctionCallBypass' Added AX_PTHREAD mechanism to support gtest on Linux.

--- a/configure.ac
+++ b/configure.ac
@@ -247,6 +247,9 @@ AC_DEFINE_UNQUOTED([PROG_ABSPATH_DOT],["$PROG_ABSPATH_DOT"],[Define to the absol
 ### Checks for libraries
 ###
 
+# The Google Test library requires POSIX threads.
+AX_PTHREAD
+
 # The Google Test library.
 # See if the user specified a path to it on the configure command line.
 #COFLO_ARG_WITH_DIR([GTEST_ROOT], [gtest], [root directory of the Google C++ Testing Framework source distribution])
