--- a/tests/atlocal.in
+++ b/tests/atlocal.in
@@ -38,7 +38,7 @@ echo "Getting a list of gcc installations...";
 MAX_GCCS_TO_TEST=16;
 
 # Get the paths to gcc's.
-GCC_PATH_ARRAY=($(find /usr/bin -regextype posix-extended -iregex '.*-.*-.*-gcc-.*(\.exe)?$' -or -iregex '.*/gcc(\.exe)?$'));
+GCC_PATH_ARRAY=($(find /usr/bin -regextype posix-extended -iregex '.*-.*-.*-gcc-[0-9\.]*(\.exe)?$' -or -iregex '.*/gcc(\.exe)?$'));
 NUM_GCCS_FOUND=${#GCC_PATH_ARRAY[*]};
 for (( i=0; $i<${NUM_GCCS_FOUND}; i++ )); do
 	# Get the version string from the compiler.
