--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -15,6 +15,10 @@
 # You should have received a copy of the GNU General Public License along with
 # CoFlo.  If not, see <http://www.gnu.org/licenses/>.
 
+# For Google Test, we need the following to be defined by configure:
+# - GTEST_ROOT: The directory of source distribution.
+#GTEST_ROOT = $(top_builddir)/third_party/gtest-1.6.0/fused-src
+
 # Subdirectories with their own Makefile{.am}'s.
 SUBDIRS = controlflowgraph debug_utils libexttools parsers templates
 
@@ -94,24 +98,19 @@ coflo_LDADD = $(NORMALLIBS) $(DPARSER_LDADD) $(ALLBOOSTLIBS)
 
 TESTLIBS = ./controlflowgraph/libcontrolflowgraphtest.a
 
-# For Google Test, we need the following to be defined by configure:
-# - GTEST_ROOT: The directory of source distribution.
-
-gtest-all.cc: $(GTEST_ROOT)/src/gtest-all.cc
-	cp $< $@
-
-BUILT_SOURCES = gtest-all.cc
-MOSTLYCLEANFILES = gtest-all.cc
+gtest-all.cpp: $(top_builddir)/third_party/gtest-1.6.0/fused-src/gtest/gtest-all.cc
+	cp "$<" "$@"
 
 check_PROGRAMS = coflotest
 coflotest_SOURCES = coflotest.cpp $(TESTSOURCES) $(COMMONSOURCES)
-nodist_coflotest_SOURCES = gtest-all.cc
-coflotest_CPPFLAGS = -I $(GTEST_ROOT)/include -I $(GTEST_ROOT) \
+nodist_coflotest_SOURCES = gtest-all.cpp
+coflotest_CC = $(PTHREAD_CC)
+coflotest_CPPFLAGS = -I $(GTEST_ROOT)/gtest -I $(GTEST_ROOT) \
 	-I $(top_builddir)/third_party/dparser/local/include -I $(top_srcdir)/src/debug_utils -I $(top_srcdir)/src/parsers \
 	$(BOOST_TR1_CPPFLAGS) $(BOOST_CPPFLAGS) $(AM_CPPFLAGS) 
-coflotest_CFLAGS = $(CPPUNIT_CFLAGS) $(AM_CFLAGS)
-coflotest_CXXFLAGS = $(AM_CXXFLAGS)
+coflotest_CFLAGS = $(PTHREAD_CFLAGS) $(AM_CFLAGS)
+coflotest_CXXFLAGS = $(PTHREAD_CFLAGS) $(AM_CXXFLAGS)
 coflotest_LDFLAGS = $(BOOST_LIBTOOL_FLAGS) $(BOOST_LDFLAGS) \
 	$(BOOST_PROGRAM_OPTIONS_LDFLAGS) $(BOOST_REGEX_LDFLAGS) $(BOOST_SYSTEM_LDFLAGS) $(BOOST_FILESYSTEM_LDFLAGS) \
 	$(AM_LDFLAGS)
-coflotest_LDADD = $(TESTLIBS) $(CPPUNIT_LIBS) $(NORMALLIBS) $(DPARSER_LDADD) $(ALLBOOSTLIBS)
+coflotest_LDADD = $(TESTLIBS) $(NORMALLIBS) $(DPARSER_LDADD) $(ALLBOOSTLIBS) $(PTHREAD_LIBS)
