--- a/src/controlflowgraph/Makefile.am
+++ b/src/controlflowgraph/Makefile.am
@@ -25,15 +25,10 @@ libcontrolflowgraph_a_SOURCES = \
 	ControlFlowGraph.cpp ControlFlowGraph.h \
 	ControlFlowGraphTraversalBase.cpp ControlFlowGraphTraversalBase.h \
 	ControlFlowGraphTraversalDFS.cpp ControlFlowGraphTraversalDFS.h \
-	DescriptorBaseClass.cpp DescriptorBaseClass.h \
-	DFSCallStack.cpp DFSCallStack.h \
-	Edge.cpp Edge.h \
-	Graph.cpp Graph.h \
-	GraphAdapter.cpp GraphAdapter.h \
-	Vertex.cpp Vertex.h \
-	VertexID.cpp VertexID.h
+	DFSCallStack.cpp DFSCallStack.h
 
-libcontrolflowgraph_a_CPPFLAGS = -I $(top_srcdir)/src/debug_utils $(AM_CPPFLAGS)
+
+libcontrolflowgraph_a_CPPFLAGS = -I $(top_srcdir)/src/debug_utils -I $(top_srcdir)/src/graph $(AM_CPPFLAGS)
 libcontrolflowgraph_a_CFLAGS = $(AM_CFLAGS)
 libcontrolflowgraph_a_CXXFLAGS = $(AM_CXXFLAGS)
 
@@ -43,6 +38,6 @@ libcontrolflowgraphtest_a_SOURCES = \
 	GraphTest.cpp \
 	ControlFlowGraph_test.cpp
 	
-libcontrolflowgraphtest_a_CPPFLAGS = -I $(GTEST_ROOT)/include -I $(GTEST_ROOT) -I $(top_srcdir)/src/debug_utils $(AM_CPPFLAGS)
+libcontrolflowgraphtest_a_CPPFLAGS = -I $(GTEST_ROOT)/include -I $(GTEST_ROOT) -I $(top_srcdir)/src/debug_utils -I $(top_srcdir)/src/graph $(AM_CPPFLAGS)
 libcontrolflowgraphtest_a_CFLAGS = $(AM_CFLAGS)
 libcontrolflowgraphtest_a_CXXFLAGS = $(AM_CXXFLAGS)
